--- a/app/css/style.css
+++ b/app/css/style.css
@@ -7,108 +7,44 @@
 body{
   margin: 0;
   padding: 0;
+  background-color: #E1E1E1;
 }
 
-/* login state */
-.login-label{
-  float: left;
-  font-weight: 700;
+md-content{
+  background-color: #E1E1E1;
 }
 
-.login-input{
+.md-card-title{
+  font-size: 20px;
+  letter-spacing: .005em;
+  font-weight: 400;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
   width: 100%;
-  height: 40px;
-  line-height: 40px;
-  border: 1px solid #D1D1D1;
-  box-shadow: none;
-  box-sizing: border-box;
-}
-
-.login-button{
-  width: 100%;
-  margin-top: 25px;
-
-  display: inline-block;
-  height: 40px;
-  line-height: 40px;
-  padding: 0 10px;
-  color: #555;
-  text-align: center;
-  font-size: 1em;
-  font-weight: 600;
-  letter-spacing: .1rem;
-  text-transform: uppercase;
-  text-decoration: none;
-  background-color: transparent;
-  white-space: nowrap;
-  border: 1px solid #BBB;
-  cursor: pointer;
-  box-sizing: border-box;
-}
-
-.login-button:hover{
-  background-color: lightblue;
-}
-
-
-/* swipe */
-.car-image{
-  width: 100%;
-  height: auto;
-  max-height: 600px;
-}
-
-.car-model{
-  width: 100%;
+  height: 64px;
+  max-height: 64px;
+  padding: 0;
   margin: 0;
-  margin-bottom: 10px;
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 1.5em;
-  color: #000000;
 }
 
-.car-location{
+/* size adjustments */
+
+.full-width{
   width: 100%;
-  margin: 0;
-  margin-bottom: 10px;
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 1em;
-  color: #000000;
 }
 
-.car-price{
+.photo-container{
   width: 100%;
-  margin: 0;
-  margin-bottom: 10px;
-  text-transform: uppercase;
-  font-weight: 700;
-  font-size: 1.5em;
-  text-align: right;
-  color: #000000;
-}
-
-.red-button{
-  width: 100%;
-  box-sizing: border-box;
-  border: none;
-  background-color: red;
-  cursor: pointer;
-  height: 100px;
-  text-transform: uppercase;
-  font-size: 2em;
-  font-weight: 700;
-}
-
-.green-button{
-  width: 100%;
-  box-sizing: border-box;
-  border: none;
-  background-color: green;
-  cursor: pointer;
-  height: 100px;
-  text-transform: uppercase;
-  font-size: 2em;
-  font-weight: 700;
+  max-width: 100%;
+  height: 100%;
+  max-height: 100%;
+  background-position: center center;
+  background-size: cover;
 }
